--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,9 +7,11 @@ $white: #ffffff;
 $wild-sand: #f4f4f4;
 
 // Spacing
-$padding-sides: 100px;
+$side-spacer: 100px;
 
 // Font Sizes
+$large-text: 35px;
+$chart-title: 24px;
 $default-text: 19px;
 $sub-text: 17px;
-$footer: 16px;
+$small-text: 16px;
