Updates to setup

--- a/src/components/Cover/Cover.scss
+++ b/src/components/Cover/Cover.scss
@@ -1,6 +1,7 @@
 @import 'styles/variables.scss';
 @import './CoverHeader.scss';
 @import './CoverColumn1.scss';
+@import './CoverColumn2.scss';
 
 .cover-container {
 	display: grid;
