--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,10 @@
 // Colors
 $azure: #3a62a3;
+$azure-05: rgba(58, 98, 163, 0.5);
 $black: #000000;
 $gray: #888888;
 $neptune: #71baaf;
+$neptune-05: rgba(113, 186, 175, 0.5);
 $white: #ffffff;
 $wild-sand: #f4f4f4;
 
@@ -11,6 +13,7 @@ $side-spacer: 100px;
 
 // Font Sizes
 $large-text: 35px;
+$medium-text: 26px;
 $chart-title: 24px;
 $default-text: 19px;
 $sub-text: 17px;
