--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,8 @@ body {
 		'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	font-size: $default-text;
+	font-size: $normal-text;
+	font-weight: $light-weight;
 }
 
 .app {
@@ -20,28 +21,20 @@ body {
 }
 
 .title {
-	font-weight: bold;
+	font-weight: $heavy-weight;
 }
 
 .section-title {
-	font-weight: bold;
+	font-weight: $heavy-weight;
 	border-bottom: 1px solid $black;
-	font-size: $chart-title;
+	font-size: $medium-text;
 }
 
 .sub-section-title {
-	font-weight: bold;
+	font-weight: $heavy-weight;
 	border-bottom: 1px solid $black;
 }
 
-.footer {
-	grid-area: footer;
-	padding: 0 $side-spacer;
-	font-size: $small-text;
-	font-weight: 500;
-	color: $gray;
-}
-
 img {
-	width: 100%;
+	max-width: 100%;
 }
