--- a/src/components/Cover/Content/Content.scss
+++ b/src/components/Cover/Content/Content.scss
@@ -5,9 +5,10 @@
 	.content-container {
 		grid-area: content;
 		display: grid;
-		grid-template-columns: 715px auto auto;
+		grid-template-columns: 715px auto;
 		grid-template-rows: auto auto auto;
 		padding: 0 $side-spacer;
 		margin-bottom: 43px;
+		grid-gap: 0 20px;
 	}
 }
