--- a/src/index.scss
+++ b/src/index.scss
@@ -23,3 +23,19 @@ body {
 img {
 	max-width: 100%;
 }
+
+// Titles
+.title {
+	font-weight: $heavy-weight;
+}
+
+.section-title {
+	font-weight: $heavy-weight;
+	border-bottom: 1px solid $black;
+	font-size: $medium-text;
+}
+
+.sub-section-title {
+	font-weight: $medium-weight;
+	border-bottom: 1px solid $black;
+}
