Add header to page 2

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-size: $normal-text;
-	font-weight: $light-weight;
+	font-weight: $normal-weight;
 }
 
 .app {
