--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,6 +13,7 @@ $wild-sand: #f4f4f4;
 $side-spacer: 100px;
 
 // Font Sizes
+$title-text: 43px;
 $extra-large-text: 35px;
 $large-text: 32px;
 $medium-text: 24px;
