--- a/src/components/Cover/Content/ColumnContent/PriceIndicator.scss
+++ b/src/components/Cover/Content/ColumnContent/PriceIndicator.scss
@@ -16,10 +16,11 @@
 					}
 					.price-per-sqft {
 						font-weight: $medium-weight;
-						font-size: $medium-text;
-						margin-right: 10px;
+						font-size: $large-text;
+						margin-right: 5px;
 					}
 					.price-per-sqft-label {
+						font-size: $medium-text;
 						font-weight: $medium-weight;
 					}
 				}
