--- a/src/components/Cover/Content/MarketSales.scss
+++ b/src/components/Cover/Content/MarketSales.scss
@@ -43,7 +43,7 @@
 				.bar {
 					display: flex;
 					align-items: center;
-					font-size: $medium-text;
+					font-size: $large-text;
 					height: 42px;
 					font-weight: $heavy-weight;
 
