--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -36,6 +36,7 @@
 					white-space: nowrap;
 					overflow: hidden;
 					text-overflow: ellipsis;
+					font-weight: $light-weight;
 				}
 			}
 		}
@@ -61,6 +62,7 @@
 		}
 
 		.address-container {
+			font-size: $medium-text;
 			text-align: right;
 		}
 	}
