--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,6 +6,7 @@ $black: #000000;
 $gray: #888888;
 $neptune: #71baaf;
 $neptune-05: rgba(113, 186, 175, 0.5);
+$thunderbird: #c6401e;
 $white: #ffffff;
 $wild-sand: #f4f4f4;
 
