--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@ $alto: #dddddd;
 $azure: #3a62a3;
 $azure-05: rgba(58, 98, 163, 0.5);
 $black: #000000;
+$black-06: rgba(0, 0, 0, 0.6);
 $gray: #888888;
 $neptune: #71baaf;
 $neptune-05: rgba(113, 186, 175, 0.5);
