--- a/src/components/SubjectPropertyDescriptionDetails/SubjectPropertyDescriptionDetails.scss
+++ b/src/components/SubjectPropertyDescriptionDetails/SubjectPropertyDescriptionDetails.scss
@@ -2,9 +2,11 @@
 @import './PropertyCharacteristics.scss';
 @import './AtAGlance.scss';
 @import './PropertyMap.scss';
+@import './PropertyFeatures.scss';
 .subject-property-description-details {
 	.content-container {
 		padding: 58px $side-spacer 0;
+		margin-bottom: 20px;
 
 		.property-row {
 			display: flex;
