--- a/src/components/Cover/Content/ColumnContent/PriceRelative.scss
+++ b/src/components/Cover/Content/ColumnContent/PriceRelative.scss
@@ -31,7 +31,8 @@
 					.legend-container {
 						display: flex;
 						justify-content: center;
-						margin-bottom: 20px;
+						margin-bottom: 10px;
+						margin-top: 10px;
 
 						.legend {
 							display: flex;
