--- a/src/components/SubjectPropertyDescriptionDetails/PropertyCharacteristics.scss
+++ b/src/components/SubjectPropertyDescriptionDetails/PropertyCharacteristics.scss
@@ -23,6 +23,8 @@
 	.chart-container {
 		background: $wild-sand;
 		flex: 1;
+		display: flex;
+		justify-content: flex-end;
 	}
 
 	.table-container {
