--- a/src/components/MarketPerformance/CostTimeMarket.scss
+++ b/src/components/MarketPerformance/CostTimeMarket.scss
@@ -74,7 +74,7 @@
 						}
 						.legend-container {
 							display: flex;
-							align-items: flex-end;
+							// align-items: flex-end;
 							.legend {
 								margin-left: 40px;
 								display: flex;
