--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,9 +7,11 @@ $black-06: rgba(0, 0, 0, 0.6);
 $gray: #888888;
 $neptune: #71baaf;
 $neptune-05: rgba(113, 186, 175, 0.5);
+$seaBuckthorn: #f69225;
 $silver: #cccccc;
 $thunderbird: #c6401e;
 $white: #ffffff;
+$white-08: rgba(255, 255, 255, 0.8);
 $wild-sand: #f4f4f4;
 
 // Spacing
