--- a/src/components/MarketPerformance1/CostTimeMarket.scss
+++ b/src/components/MarketPerformance1/CostTimeMarket.scss
@@ -90,7 +90,7 @@
 
 					.chart {
 						margin-top: 10px;
-						background: $wild-sand;
+						// background: $wild-sand;
 						&.price-range {
 							height: 300px;
 						}
