--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,12 +2,15 @@
 $alto: #dddddd;
 $azure: #3a62a3;
 $azure-05: rgba(58, 98, 163, 0.5);
+$azure-08: rgba(58, 98, 163, 0.8);
 $black: #000000;
 $black-05: rgba(0, 0, 0, 0.5);
 $black-06: rgba(0, 0, 0, 0.6);
+$black-08: rgba(0, 0, 0, 0.8);
 $gray: #888888;
 $neptune: #71baaf;
 $neptune-05: rgba(113, 186, 175, 0.5);
+$neptune-08: rgba(113, 186, 175, 0.8);
 $seaBuckthorn: #f69225;
 $silver: #cccccc;
 $thunderbird: #c6401e;
