--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,16 +7,20 @@ $black: #000000;
 $black-05: rgba(0, 0, 0, 0.5);
 $black-06: rgba(0, 0, 0, 0.6);
 $black-08: rgba(0, 0, 0, 0.8);
+$dusty-gray: #979797;
 $gray: #888888;
+$mountain-mist: #a196a6;
 $neptune: #71baaf;
 $neptune-05: rgba(113, 186, 175, 0.5);
 $neptune-08: rgba(113, 186, 175, 0.8);
 $seaBuckthorn: #f69225;
 $silver: #cccccc;
+$slate-gray: #758297;
 $thunderbird: #c6401e;
 $white: #ffffff;
 $white-08: rgba(255, 255, 255, 0.8);
 $wild-sand: #f4f4f4;
+$wisteria: #aa77bf;
 
 // Spacing
 $side-spacer: 100px;
