--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -16,7 +16,8 @@ $neptune-08: rgba(113, 186, 175, 0.8);
 $seaBuckthorn: #f69225;
 $silver: #cccccc;
 $slate-gray: #758297;
-$thunderbird: #c6401e;
+$supernova: #ffc907;
+$thunderbird: #d04a42;
 $white: #ffffff;
 $white-08: rgba(255, 255, 255, 0.8);
 $wild-sand: #f4f4f4;
