Add recent listings

--- a/src/components/SubjectPropertyHistory/SubjectPropertyHistory.scss
+++ b/src/components/SubjectPropertyHistory/SubjectPropertyHistory.scss
@@ -1,6 +1,7 @@
 @import 'styles/variables';
 @import './PropertyValueTrend.scss';
 @import './Legend.scss';
+@import './MostRecentListings.scss';
 
 .subject-property-history {
 	.content-container {
