--- a/src/components/SubjectPropertyHistory/PropertyValueTrend.scss
+++ b/src/components/SubjectPropertyHistory/PropertyValueTrend.scss
@@ -1,34 +1,35 @@
 @import 'styles/variables';
 
 .subject-property-history {
+	.circle {
+		width: 30px;
+		height: 30px;
+		border-radius: 100%;
+		margin-right: 10px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-weight: $heavy-weight;
+		color: $white;
+		&.retail {
+			background-color: $black;
+		}
+		&.rental {
+			background-color: $azure;
+		}
+		&.flip {
+			background-color: $neptune;
+		}
+		&.distressed {
+			width: 27px;
+			height: 27px;
+			border: 3px solid $black;
+			color: $black;
+			background-color: $white;
+		}
+	}
 	.content-container {
 		.property-value-trend {
-			.circle {
-				width: 30px;
-				height: 30px;
-				border-radius: 100%;
-				margin-right: 10px;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				font-weight: $heavy-weight;
-				color: $white;
-				&.retail {
-					background-color: $black;
-				}
-				&.rental {
-					background-color: $azure;
-				}
-				&.flip {
-					background-color: $neptune;
-				}
-				&.distressed {
-					width: 27px;
-					height: 27px;
-					border: 3px solid $black;
-					color: $black;
-				}
-			}
 			.chart-row {
 				display: flex;
 				height: 400px;
