Add subject property history page

--- a/src/components/SubjectPropertyHistory/SubjectPropertyHistory.scss
+++ b/src/components/SubjectPropertyHistory/SubjectPropertyHistory.scss
@@ -2,6 +2,7 @@
 @import './PropertyValueTrend.scss';
 @import './Legend.scss';
 @import './MostRecentListings.scss';
+@import './ActiveProperty.scss';
 
 .subject-property-history {
 	.content-container {
