Add additional property pages

--- a/src/components/SubjectPropertyHistory/SubjectPropertyHistory.scss
+++ b/src/components/SubjectPropertyHistory/SubjectPropertyHistory.scss
@@ -3,10 +3,12 @@
 @import './Legend.scss';
 @import './MostRecentListings.scss';
 @import './ActiveProperty.scss';
+@import './AdditionalPropertyListing.scss';
+@import './AdditionalPropertyHistory.scss';
 
 .subject-property-history {
 	.content-container {
 		padding: 45px $side-spacer 0;
-		margin-bottom: 50px;
+		margin-bottom: 35px;
 	}
 }
