--- a/src/components/SubjectPropertyHistory/AdditionalPropertyListing.scss
+++ b/src/components/SubjectPropertyHistory/AdditionalPropertyListing.scss
@@ -16,9 +16,9 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			background: $alto;
 			img {
 				height: 100%;
-				width: 100%;
 			}
 		}
 	}
