--- a/src/components/SubjectPropertyHistory/MostRecentListings.scss
+++ b/src/components/SubjectPropertyHistory/MostRecentListings.scss
@@ -21,7 +21,7 @@
 					align-items: center;
 					background: $alto;
 					img {
-						width: 100%;
+						height: 100%;
 					}
 					position: relative;
 					.circle {
