--- a/src/components/MarketSummary/NotableListingSales.scss
+++ b/src/components/MarketSummary/NotableListingSales.scss
@@ -27,6 +27,7 @@
 					display: flex;
 					align-items: center;
 					justify-content: center;
+					background: $alto;
 
 					.row {
 						position: absolute;
@@ -63,7 +64,7 @@
 					}
 
 					img {
-						width: 100%;
+						height: 100%;
 					}
 				}
 				.info-container {
