--- a/src/components/Cover/Content/ColumnContent/ConfidenceScore.scss
+++ b/src/components/Cover/Content/ColumnContent/ConfidenceScore.scss
@@ -7,6 +7,8 @@
 				.confidence-score-container {
 					margin-top: 28px;
 					.score-container {
+						height: 100px;
+						box-sizing: border-box;
 						background: $wild-sand;
 						padding: 20px 10px;
 						margin-top: 17px;
