--- a/src/components/Cover/Content/ColumnContent/PriceIndicator.scss
+++ b/src/components/Cover/Content/ColumnContent/PriceIndicator.scss
@@ -8,6 +8,7 @@
 					display: flex;
 					align-items: center;
 					.indicator {
+						width: 20px;
 						margin-right: 15px;
 					}
 					.price {
