--- a/src/components/MarketSummary/MarketSummary.scss
+++ b/src/components/MarketSummary/MarketSummary.scss
@@ -5,6 +5,7 @@
 .market-summary {
 	.footer-container {
 		background: $wild-sand;
-		padding-bottom: 39px;
+		padding-bottom: 25px;
+		margin-bottom: 0;
 	}
 }
