--- a/src/components/Cover/Content/Content.scss
+++ b/src/components/Cover/Content/Content.scss
@@ -22,22 +22,22 @@
 	}
 
 	.value-defined-container {
-		margin-top: 35px;
+		margin-top: 135px;
 
 		.section-title {
 			height: 35px;
 		}
 
 		.description {
-			margin-top: 35px;
-			height: 100px;
+			margin-top: 25px;
+			max-height: 85px;
 			overflow: hidden;
 			text-overflow: ellipsis;
 		}
 
 		.map-container {
-			margin-top: 35px;
-			height: 430px;
+			margin-top: 30px;
+			height: 350px;
 			background: $wild-sand;
 		}
 	}
