Remove photo limit

--- a/src/index.scss
+++ b/src/index.scss
@@ -24,7 +24,7 @@ body {
 	justify-content: center;
 	overflow: hidden;
 	align-items: center;
-	background: $alto;
+	background: $wild-sand;
 	img {
 		max-height: 100%;
 	}
