[100] UAT: circle around family make-up is lighter than the approved designs.

--- a/src/components/Demographics/FamilyMakeup.scss
+++ b/src/components/Demographics/FamilyMakeup.scss
@@ -6,7 +6,7 @@
 			.chart-container {
 				width: 200px;
 				height: 200px;
-				background: $wild-sand;
+				background: $black-35;
 				margin: 20px auto;
 			}
 			.description {
