--- a/src/components/SubjectPropertyHistory/MostRecentListings.scss
+++ b/src/components/SubjectPropertyHistory/MostRecentListings.scss
@@ -13,6 +13,7 @@
 			margin-top: 20px;
 
 			.panel {
+				border: 1px solid #000000;
 				.image-container {
 					height: 300px;
 					position: relative;
