--- a/src/components/Cover/Content/ColumnContent/PriceRelative.scss
+++ b/src/components/Cover/Content/ColumnContent/PriceRelative.scss
@@ -12,8 +12,10 @@
 				}
 				.chart-container {
 					margin-top: 20px;
-
 					flex: 1;
+					display: flex;
+					flex-direction: column;
+					align-items: center;
 
 					&.retail {
 						.legend-container {
