--- a/src/components/MarketPerformance1/Transactions.scss
+++ b/src/components/MarketPerformance1/Transactions.scss
@@ -89,7 +89,7 @@
 							color: $wisteria;
 						}
 						&.flip-rental {
-							color: $mountain-mist;
+							color: $thunderbird;
 						}
 					}
 				}
